# Orchids-challenge

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/models/: schemas.py
backend/routers/: clone.py
backend/services/: ai_cloner.py  scraper.py
frontend/: README.md
frontend/src/app/: page.tsx
frontend/src/components/: CloneStatus.tsx  PreviewPane.tsx  URLInputs.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
